--- a/application/layouts/master.phtml
+++ b/application/layouts/master.phtml
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<link type="text/css" rel="stylesheet" media="all" href="css/master.css" />
-<script src="js/_libs/jquery-1.8.3.min.js"></script>  
+<link type="text/css" rel="stylesheet" media="all" href="/css/master.css" />
+<script src="/js/jquery-1.8.3.min.js"></script>  
 </head>
 <body>
 
@@ -13,9 +13,9 @@
 		</div>
 		
 		<ul id="menu">
-			<li><a href="#">Главная</a></li>
-			<li><a href="#">Услуги</a></li>
-			<li><a href="#">Контакты</a></li>
+			<li><a href="<?php echo $this->url(array(), 'home'); ?>">Главная</a></li>
+			<li><a href="<?php echo $this->url(array('page' => 'services'), 'static-content'); ?>">Услуги</a></li>
+			<li><a href="<?php echo $this->url(array(), 'contact'); ?>">Контакты</a></li>
 		</ul>
 	</div>
 	
